kubernetes/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: jerney-ns 
  labels:
    app.kubernetes.io/part-of: jerney
