kubernetes/04-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  namespace: jerney-ns
  labels:
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/name: frontend-deployment
    app.kubernetes.io/component: frontend

spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend-deployment

  template:
    metadata:
      name: frontend-pod
      labels:
        app.kubernetes.io/name: frontend-deployment
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: jerney
    spec:
      containers:
      - name: frontend-container
        image: jerney-frontend:latest
        ports:
        - containerPort: 80
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false # Nginx needs write for cache/pid
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
