kubernetes/06-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: jerney-ns
  labels:
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/name: frontend-service
    app.kubernetes.io/component: frontend

spec:
  selector:
    app.kubernetes.io/name: frontend-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
