kubernetes/09-statefulSet-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: jerney-ns
  labels:
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/name: db
    app.kubernetes.io/component: db

spec:
  clusterIP: None # This makes the service headless, which is required for StatefulSets
  selector:
    app.kubernetes.io/name: db-statefulset
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
